learn microtask&macrotask

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         // console.log(copyArr);
 
         // mixin
+        // 参考教程https://zh.javascript.info/mixins
         let eventMixin = {
             /**
              * 订阅事件，用法：
